<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:shrinkColumns="*"
    android:stretchColumns="*"
    >
    <TableRow>
        <EditText
            android:id="@+id/txt_show"
            android:layout_height="@dimen/edit_height"
            android:layout_span="4"
            android:focusable="false"
            android:gravity="end"
            android:text="@string/string_0"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"
            />
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/btn_clear"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/custom_button"
            android:text="@string/AC"
            android:padding="@dimen/dm_10dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size"
            />
        <Button
            android:id="@+id/btn_nev"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/custom_button"
            android:text="@string/nev"
            android:padding="@dimen/dm_10dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size"
            />
        <Button
            android:id="@+id/btn_percent"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/custom_button"
            android:text="@string/percent"
            android:padding="@dimen/dm_10dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size"
            />
        <Button
            android:id="@+id/btn_div"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/custom_button"
            android:text="@string/div"
            android:padding="@dimen/dm_10dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"
            />

    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/btn_7"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/custom_button_01"
            android:text="@string/number_seven"
            android:padding="@dimen/dm_10dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"
            />
        <Button
            android:id="@+id/btn_8"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/custom_button_01"
            android:text="@string/number_eight"
            android:padding="@dimen/dm_10dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"
            />
        <Button
            android:id="@+id/btn_9"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/custom_button_01"
            android:text="@string/number_nine"
            android:padding="@dimen/dm_10dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"
            />
        <Button
            android:id="@+id/btn_multi"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/custom_button"
            android:text="@string/multi"
            android:padding="@dimen/dm_10dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"
            />
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/btn_4"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/custom_button_01"
            android:text="@string/number_four"
            android:padding="@dimen/dm_10dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"
            />
        <Button
            android:id="@+id/btn_5"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/custom_button_01"
            android:text="@string/number_five"
            android:padding="@dimen/dm_10dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"
            />
        <Button
            android:id="@+id/btn_6"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/custom_button_01"
            android:text="@string/number_six"
            android:padding="@dimen/dm_10dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"
            />
        <Button
            android:id="@+id/btn_sub"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/custom_button"
            android:text="@string/sub"
            android:padding="@dimen/dm_10dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"
            />
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/btn_1"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/custom_button_01"
            android:text="@string/number_one"
            android:padding="@dimen/dm_10dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"
            />
        <Button
            android:id="@+id/btn_2"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/custom_button_01"
            android:text="@string/number_two"
            android:padding="@dimen/dm_10dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"
            />
        <Button
            android:id="@+id/btn_3"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/custom_button_01"
            android:text="@string/number_three"
            android:padding="@dimen/dm_10dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"
            />
        <Button
            android:id="@+id/btn_add"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/custom_button"
            android:text="@string/plus"
            android:padding="@dimen/dm_10dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"
            />
    </TableRow>
    <TableRow>
        <Button
            android:layout_span="2"
            android:id="@+id/btn_0"
            android:layout_margin="@dimen/margin"
            android:text="@string/number_zero"
            android:background="@drawable/custom_button_02"
            android:textColor="@android:color/white"
            android:padding="@dimen/dm_10dp"
            android:textDirection="firstStrong"
            android:textSize="@dimen/text_size"
            />
        <Button
            android:id="@+id/btn_dot"
            android:layout_margin="@dimen/margin"
            android:text="@string/dot"
            android:padding="@dimen/dm_10dp"
            android:background="@drawable/custom_button_01"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"
            />
        <Button
            android:id="@+id/btn_result"
            android:layout_margin="@dimen/margin"
            android:text="@string/result"
            android:padding="@dimen/dm_10dp"
            android:background="@drawable/custom_button"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"
            />
    </TableRow>
</TableLayout>